--- a/assets/assets/css/style.css
+++ b/assets/assets/css/style.css
@@ -5,6 +5,13 @@
     box-sizing: border-box;
 }
 
+/*General style */
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    color: #3a3a3a;
+}
 
 /* Header */
 header {
@@ -13,6 +20,7 @@ header {
 /* Main */
 main {
     background-color: orange;
+    flex: 1 0 auto;
 }
 /* Footer */
 footer {
