--- a/assets/assets/css/style.css
+++ b/assets/assets/css/style.css
@@ -1,9 +1,82 @@
+/* Google Fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 /* Asterix overrides default styles added by browsers*/
 * {
-    padding:0;
+    padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
+/* // <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 200 to 700 */
+
+.oswald-<uniquifier> {
+    font-family: "Oswald", serif;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
+  }
+  
+  .lato-thin {
+      font-family: "Lato", serif;
+      font-weight: 100;
+      font-style: normal;
+    }
+    
+    .lato-light {
+      font-family: "Lato", serif;
+      font-weight: 300;
+      font-style: normal;
+    }
+    
+    .lato-regular {
+      font-family: "Lato", serif;
+      font-weight: 400;
+      font-style: normal;
+    }
+    
+    .lato-bold {
+      font-family: "Lato", serif;
+      font-weight: 700;
+      font-style: normal;
+    }
+    
+    .lato-black {
+      font-family: "Lato", serif;
+      font-weight: 900;
+      font-style: normal;
+    }
+    
+    .lato-thin-italic {
+      font-family: "Lato", serif;
+      font-weight: 100;
+      font-style: italic;
+    }
+    
+    .lato-light-italic {
+      font-family: "Lato", serif;
+      font-weight: 300;
+      font-style: italic;
+    }
+    
+    .lato-regular-italic {
+      font-family: "Lato", serif;
+      font-weight: 400;
+      font-style: italic;
+    }
+    
+    .lato-bold-italic {
+      font-family: "Lato", serif;
+      font-weight: 700;
+      font-style: italic;
+    }
+    
+    .lato-black-italic {
+      font-family: "Lato", serif;
+      font-weight: 900;
+      font-style: italic;
+    }
 
 /*General style */
 body {
@@ -13,15 +86,23 @@ body {
     color: #3a3a3a;
 }
 
+h1 {
+    font-family: "Lato", serif;
+    
+}
+
 /* Header */
 header {
-    background-color: blue;
+    background-color: lightskyblue;
 }
+
 /* Main */
 main {
     background-color: orange;
+    /* Make main element take up any surplus space to push footer down. Flex is shorthand for flex-grow, flex-shrink, flex-basis */
     flex: 1 0 auto;
 }
+
 /* Footer */
 footer {
     background-color: green;
