header fixed position and stand out from main content

--- a/assets/assets/css/style.css
+++ b/assets/assets/css/style.css
@@ -93,7 +93,12 @@ h1 {
 
 /* Header */
 header {
-    background-color: lightskyblue;
+    background-color: #fff;
+    padding: 0 1rem;
+    position:fixed;
+    z-position:99;
+    width: 100%;
+    box-shadow: 0 2px 2px #3a3a3a;
 }
 
 /* Main */
