--- a/assets/assets/css/style.css
+++ b/assets/assets/css/style.css
@@ -91,9 +91,12 @@ header {
     background-color: #fff;
     padding: 0 1rem;
     position:fixed;
-    z-position:99;
+    z-index:99;
     width: 100%;
     box-shadow: 0 2px 2px #3a3a3a;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 header a{
@@ -109,13 +112,12 @@ h1 {
 }
 
 #menu {
-  font-family:inherit;
   list-style-type: none;
   font-size: 110%;
   letter-spacing: 4px;
 }
 
-li {
+#menu li {
   margin-bottom: 1em;
 }
 
@@ -123,14 +125,43 @@ li {
   border-bottom: 1px solid #3a3a3a;
 }
 
+/* Nav bar styles with dropdown toggle */
+nav {
+  position: absolute;
+  background-color: #fff;
+  width: 100%;
+  left: 0;
+  box-shadow: 0 2px 2px #3a3a3a;
+  padding: 0 1rem;
+  display:none;
+  top:100%;
+}
+
+/*nav toggle */
+#nav-toggle:checked~nav {
+  display:block;
+}
+
+#nav-toggle {
+  display: none;
+}
+
+#nav-toggle {
+  display: none;
+}
+
+nav-toggle-label {
+  font-size: 2rem;
+}
+
 /* Main */
 main {
-    background-color: orange;
+    background-color: lightblue;
     /* Make main element take up any surplus space to push footer down. Flex is shorthand for flex-grow, flex-shrink, flex-basis */
     flex: 1 0 auto;
 }
 
 /* Footer */
 footer {
-    background-color: green;
+    background-color: orange;
 }
