--- a/assets/assets/css/style.css
+++ b/assets/assets/css/style.css
@@ -159,9 +159,33 @@ main {
     background-color: lightblue;
     /* Make main element take up any surplus space to push footer down. Flex is shorthand for flex-grow, flex-shrink, flex-basis */
     flex: 1 0 auto;
+    margin-top: 47px;
 }
 
 /* Footer */
 footer {
     background-color: orange;
+}
+
+/* Media query: tablet and larger (768px and up) */
+@media screen and (min-width: 768px) {
+  /* header */
+  nav {
+    display: block;
+    position: relative;
+    box-shadow: none;
+    width: fit-content;
+    padding-right: 1rem;
+  }
+    #menu {
+    display: flex;
+  }
+
+    #menu > li {
+      padding-left: 1rem;
+    }
+
+    .nav-toggle-label {
+      display: none;
+    }
 }
