--- a/assets/assets/css/style.css
+++ b/assets/assets/css/style.css
@@ -7,83 +7,13 @@
     margin: 0;
     box-sizing: border-box;
 }
-
-/* // <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 200 to 700 */
-
-.oswald-<uniquifier> {
-    font-family: "Oswald", serif;
-    font-optical-sizing: auto;
-    font-weight: <weight>;
-    font-style: normal;
-  }
-  
-  .lato-thin {
-      font-family: "Lato", serif;
-      font-weight: 100;
-      font-style: normal;
-    }
-    
-    .lato-light {
-      font-family: "Lato", serif;
-      font-weight: 300;
-      font-style: normal;
-    }
-    
-    .lato-regular {
-      font-family: "Lato", serif;
-      font-weight: 400;
-      font-style: normal;
-    }
-    
-    .lato-bold {
-      font-family: "Lato", serif;
-      font-weight: 700;
-      font-style: normal;
-    }
-    
-    .lato-black {
-      font-family: "Lato", serif;
-      font-weight: 900;
-      font-style: normal;
-    }
-    
-    .lato-thin-italic {
-      font-family: "Lato", serif;
-      font-weight: 100;
-      font-style: italic;
-    }
-    
-    .lato-light-italic {
-      font-family: "Lato", serif;
-      font-weight: 300;
-      font-style: italic;
-    }
-    
-    .lato-regular-italic {
-      font-family: "Lato", serif;
-      font-weight: 400;
-      font-style: italic;
-    }
-    
-    .lato-bold-italic {
-      font-family: "Lato", serif;
-      font-weight: 700;
-      font-style: italic;
-    }
-    
-    .lato-black-italic {
-      font-family: "Lato", serif;
-      font-weight: 900;
-      font-style: italic;
-    }
-
 /*General style */
 body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     color: #3a3a3a;
+    font-family: 'Lato', 'sans-serif';
 }
 
 /* Header */
@@ -188,4 +118,23 @@ footer {
     .nav-toggle-label {
       display: none;
     }
+
+    #logo {
+      font-size: 280%;
+      line-height: 75px;
+      margin: 0 0.5rem;
+
+    }
+
+    main {
+      margin-top: 79px;
+    }
+}
+
+/* Media query: large devices (992px and up) */
+@media screen and (min-width: 992px) {
+  /* header */
+  nav a:hover {
+    border-bottom: 1px solid #3a3a3a;
+  }
 }
