--- a/assets/assets/css/style.css
+++ b/assets/assets/css/style.css
@@ -76,10 +76,6 @@ nav {
   display: none;
 }
 
-#nav-toggle {
-  display: none;
-}
-
 nav-toggle-label {
   font-size: 2rem;
 }
@@ -112,8 +108,49 @@ main {
 
 #cover-text > h2, #cover-text > h3 {
   color: #fff;
-
 }
+
+/* reasons section */
+#reasons {
+  margin: 20px auto;
+  width: 90%;
+}
+
+#reasons h2 {
+  font-size:280%;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+#benefits {
+  margin-top: 20px;
+}
+
+#benefits hr {
+  border-top: 1px solid #3a3a3a;
+  margin: 5px 0;
+}
+
+#benefits p {
+  padding: 0 20px;
+}
+
+#circle-cover-bg {
+  background: url(../images/reasons-image.webp) no-repeat top center/cover;
+  margin-bottom: 20px;
+  width: 90vw;
+  height: 90vw;
+  border-radius: 50%;
+  max-width: 300px;
+  max-height: 300px;
+}
+
+#benefits-image {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
@@ -162,12 +199,29 @@ main {
       margin-top: 79px;
     }
 
+    /*HERO*/
     #cover-text {
-      font-size: 130%;
       padding-top: 30px;
       right: 50px;
       width: 300px;
     }
+
+    /*reasons*/ 
+    
+    #benefits-physical, #benefits-mental {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+
+    #benefits-physical>div, #benefits-mental>div {
+      width: 75%;
+    }  
+    #benefits-mental>div {
+      text-align: end;
+      align-self: flex-end;
+    }
+
 }
 
 /* Media query: large devices (992px and up) */
@@ -175,5 +229,34 @@ main {
   /* header */
   nav a:hover {
     border-bottom: 1px solid #3a3a3a;
+  }
+}
+
+/* Media query: very large devices (1200px and up) */
+@media screen and (min-width: 1200px) {
+
+  #benefits {
+    display:flex;
+    flex-direction: row;
+  }
+
+  #benefits>div {
+    flex: 1;
+  }
+
+  #benefits-image {
+    order: 0;
+  }
+
+  #benefits-mental {
+    order: 1;
+  }
+
+ #benefits-metal>div {
+    align-self: flex-start;
+  }
+
+  #benefits-physical>div {
+    align-self: flex-end;
   }
 }
