add styling to Gallery for mobile phones

--- a/assets/assets/css/style.css
+++ b/assets/assets/css/style.css
@@ -180,6 +180,16 @@ main {
   color:#fafafa;
 }
 
+/* gallery page*/
+
+#photos img {
+  width:100%;
+}
+
+#photos {
+  line-height: 0;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
