--- a/assets/assets/css/style.css
+++ b/assets/assets/css/style.css
@@ -184,11 +184,75 @@ main {
 
 #photos img {
   width:100%;
+  /*if broken down in inspection, alt-text is readible. without line-height, it is not, because of the line-height change in photos */
+  line-height:1em;
 }
 
 #photos {
   line-height: 0;
 }
+
+/*signup page */
+
+main #signup {
+  display: flex;
+  
+}
+
+#signup {
+  background: url(../images/signup-image.webp) no-repeat center/cover;
+  background-position: 75%;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  margin: 30px auto 20px;
+  padding: 20px 10% 0 10%;
+}
+
+#signup-form h2 {
+  color: #fafafa;
+  margin: 30px auto 20px;
+}
+
+#signup-form {
+  background-color: rgba(0, 0, 0, .6);
+  color: #fff;
+  padding: 30px;
+}
+
+#first-name, #last-name {
+  margin-bottom: 30px;
+}
+
+.text-input {
+  background-color: transparent;
+  color:#fafafa;
+  border: 1px solid #fafafa;
+  border-radius: 2px;
+  padding: 5px 0 20px 0;
+  width: 100%;
+  height: 25px;
+}
+
+.radio-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+  width:100%;
+
+}
+
+.join-button {
+  padding: 15px 32px;
+  margin-top: 20px;
+  font-size: 100%;
+  background-color: #454b1b;
+  border-radius: 2px;
+  color: #fafafa;
+}
+
+
+
+
 
 /* Footer */
 #social-networks {
@@ -203,6 +267,14 @@ main {
     color:#3a3a3a;
     font-size: 160%;
     padding: 5%;
+}
+
+/* Media query: tablet and larger (576px and up) */
+@media screen and (min-width: 576px) {
+  #photos {
+    column-count: 2;
+    column-gap: 0;
+  }
 }
 
 /* Media query: tablet and larger (768px and up) */
@@ -261,6 +333,15 @@ main {
       align-self: flex-end;
     }
 
+    #photos {
+      column-count: 3;
+      column-gap: 0;
+    }
+
+    #signup {
+      position: relative;
+      background-position: center;
+    }
 }
 
 /* Media query: large devices (992px and up) */
@@ -297,5 +378,10 @@ main {
 
   #benefits-physical>div {
     align-self: flex-end;
+  }
+
+  #photos {
+    column-count: 4;
+    column-gap: 0;
   }
 }
